force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/Apttus_Approval__ApprovalRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single rule in an approval ruleset</description>
    <label>Approval Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>