force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__ApprovalCount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalCount__c</fullName>
    <description>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</description>
    <inlineHelpText>The number of approvals required by the approval policy. Only applicable to quorum approval policy.</inlineHelpText>
    <label>Approval Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>