force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__ApprovalPercent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalPercent__c</fullName>
    <description>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</description>
    <inlineHelpText>The percent of approvals required by the approval policy. Only applicable to percent approval policy.</inlineHelpText>
    <label>Approval Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>