force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__BusinessObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__BusinessObject__c</fullName>
    <description>The business object which provides the context for the rule</description>
    <label>Business Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Apttus__AgreementLineItem__c</fullName>
            </value>
            <value>
                <fullName>Apttus__Agreement_Term_Exception__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>