force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__Criteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Criteria__c</fullName>
    <description>The rule criteria specification</description>
    <label>Rule Criteria</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>