force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__Dimension2Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Dimension2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the second dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 2</label>
    <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
    <relationshipLabel>Approval Rules (Dimension 2)</relationshipLabel>
    <relationshipName>ApprovalRules2</relationshipName>
    <type>Lookup</type>
</CustomField>