force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__Dimension3Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Dimension3Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the third dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 3</label>
    <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
    <relationshipLabel>Approval Rules (Dimension 3)</relationshipLabel>
    <relationshipName>ApprovalRules3</relationshipName>
    <type>Lookup</type>
</CustomField>