force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__Dimension3ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Dimension3ValueType__c</fullName>
    <description>The value type of the third dimension. Only applicable to Dimension rules.</description>
    <label>Dimension 3 Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discrete</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>