force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__Dimension4Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Dimension4Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the fourth dimension, Only applicable to Dimension rules.</description>
    <label>Dimension 4</label>
    <referenceTo>Apttus_Approval__ApprovalRuleDimension__c</referenceTo>
    <relationshipLabel>Approval Rules (Dimension 4)</relationshipLabel>
    <relationshipName>ApprovalRules4</relationshipName>
    <type>Lookup</type>
</CustomField>