force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ExpirationDate__c</fullName>
    <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>