force-app/main/default/objects/Apttus_Approval__ApprovalRule__c/fields/Apttus_Approval__RuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__RuleType__c</fullName>
    <description>The rule type</description>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dimension</fullName>
                <default>true</default>
                <label>Dimension</label>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>